--- a/client/src/components/authorization/authorization.css
+++ b/client/src/components/authorization/authorization.css
@@ -1,4 +1,4 @@
-.registration {
+.authorization {
   display: flex;
   flex-direction: column;
   width: 500px;
@@ -10,14 +10,14 @@
   margin: 0 auto;
   margin-top: 100px;
 }
-.registration__header {
+.authorization__header {
   font-size: 30px;
   font-weight: 700;
 }
-.registration input {
+.authorization input {
   margin: 10px 20px;
 }
-.registration__btn {
+.authorization__btn {
   border: none;
   background-color: #566885;
   border-radius: 8px;
@@ -27,4 +27,4 @@
   align-self: flex-end;
   margin-top: 10px;
 }
-/*# sourceMappingURL=registration.css.map */
+/*# sourceMappingURL=authorization.css.map */
