--- a/client/src/components/disk/fileList/file/file.less
+++ b/client/src/components/disk/fileList/file/file.less
@@ -2,7 +2,7 @@
 
 .file {
   margin: 10px 0;
-  border-bottom: solid 2px @font-color ;
+  border-bottom: solid 2px @font-color;
   display: grid;
   grid-template-columns: 1fr 4fr repeat(4, 1fr);
   align-items: center;
@@ -10,6 +10,7 @@
   &:hover {
     transform: scale(1.02);
   }
+
   &__img {
     justify-self: center;
   }
@@ -18,8 +19,31 @@
     grid-column-start: 5;
     justify-self: center;
   }
+
   &__size {
     grid-column-start: 6;
     justify-self: center;
+  }
+
+  &__btn {
+    display: none;
+  }
+
+  &:hover &__date {
+    grid-column-start: 3;
+  }
+
+  &:hover &__size {
+    grid-column-start: 4;
+  }
+
+  &:hover &__download {
+    grid-column-start: 5;
+    display: block;
+  }
+
+  &:hover &__delete {
+    grid-column-start: 6;
+    display: block;
   }
 }
