--- a/client/src/components/disk/fileList/fileList.less
+++ b/client/src/components/disk/fileList/fileList.less
@@ -9,12 +9,29 @@
   &__name {
     grid-column-start: 2;
   }
+
   &__date {
     grid-column-start: 5;
     justify-self: center;
   }
+
   &__size {
     grid-column-start: 6;
     justify-self: center;
+  }
+}
+
+.file-enter-active {
+  animation: file-enter 500ms forwards;
+}
+
+@keyframes file-enter {
+  0% {
+    opacity: 0;
+    transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
