Feat(client): add file views

--- a/client/src/components/disk/fileList/fileList.less
+++ b/client/src/components/disk/fileList/fileList.less
@@ -25,6 +25,12 @@
   animation: file-enter 500ms forwards;
 }
 
+.fileplate {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
+
 @keyframes file-enter {
   0% {
     opacity: 0;
