--- a/client/src/components/disk/fileList/fileList.css
+++ b/client/src/components/disk/fileList/fileList.css
@@ -19,6 +19,11 @@
 .file-enter-active {
   animation: file-enter 500ms forwards;
 }
+.fileplate {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
 @keyframes file-enter {
   0% {
     opacity: 0;
